exports[`placeholder should properly add rules when block has existing rules 1`] = `
Object {
<<<<<<< HEAD
  "background": "white",
  "input:-moz-placeholder": Object {
    "color": "blue",
  },
  "input:-ms-input-placeholder": Object {
    "color": "blue",
  },
  "input::-moz-placeholder": Object {
    "color": "blue",
  },
  "input::-webkit-input-placeholder": Object {
    "color": "blue",
=======
  "input": Object {
    "background": "white",
    "input:-moz-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "input:-ms-input-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "input::-moz-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "input::-webkit-input-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
>>>>>>> 088995e... chore(placeholder): Add placeholder mixin
  },
}
`;

exports[`placeholder should properly default to & when not passed a parent 1`] = `
Object {
  "input": Object {
    "&:-moz-placeholder": Object {
      "color": "blue",
<<<<<<< HEAD
    },
    "&:-ms-input-placeholder": Object {
      "color": "blue",
    },
    "&::-moz-placeholder": Object {
      "color": "blue",
    },
    "&::-webkit-input-placeholder": Object {
      "color": "blue",
=======
      "font-size": "12px",
    },
    "&:-ms-input-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "&::-moz-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "&::-webkit-input-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
>>>>>>> 088995e... chore(placeholder): Add placeholder mixin
    },
  },
}
`;

exports[`placeholder should properly pass styles object and parent 1`] = `
Object {
<<<<<<< HEAD
  "input:-moz-placeholder": Object {
    "color": "blue",
  },
  "input:-ms-input-placeholder": Object {
    "color": "blue",
  },
  "input::-moz-placeholder": Object {
    "color": "blue",
  },
  "input::-webkit-input-placeholder": Object {
    "color": "blue",
=======
  "input": Object {
    "input:-moz-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "input:-ms-input-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "input::-moz-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
    "input::-webkit-input-placeholder": Object {
      "color": "blue",
      "font-size": "12px",
    },
>>>>>>> 088995e... chore(placeholder): Add placeholder mixin
  },
}
`;
